--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react-dom": "18.2.4",
     "eslint": "^8.41.0",
     "eslint-config-next": "13.4.3",
+    "evergreen-ui": "^7.1.8",
     "framer-motion": "^10.12.16",
     "next": "^13.4.3",
     "react": "18.2.0",
