--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
     "eslint-config-next": "13.4.3",
     "evergreen-ui": "^7.1.8",
     "framer-motion": "^10.12.16",
+    "mysql2": "^3.3.3",
+    "net": "^1.0.2",
     "next": "^13.4.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "sass": "^1.62.1",
+    "tls": "^0.0.1",
     "typescript": "5.0.4"
   },
   "devDependencies": {
