--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/node": "20.2.3",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
+    "chart.js": "^4.3.0",
     "eslint": "^8.41.0",
     "eslint-config-next": "13.4.3",
     "evergreen-ui": "^7.1.8",
@@ -27,6 +28,7 @@
     "net": "^1.0.2",
     "next": "^13.4.3",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "sass": "^1.62.1",
