Composição do ChatBot

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-spring": "^9.7.1",
     "sass": "^1.62.1",
     "tls": "^0.0.1",
     "typescript": "5.0.4"
